Entry page changes: Default reference systems changed. Additional reference systems can be added. Table of 5 closest system shown for calculated coordinates. Input and output is also displayed as JSON.

--- a/trilateration.css
+++ b/trilateration.css
@@ -14,3 +14,12 @@ td {
 .selected {
 	background-color: red;
 }
+pre {
+	border: 1px solid black;
+}
+.ui-autocomplete {
+	max-height: 190px;
+	overflow-y: auto;
+	/* prevent horizontal scrollbar */
+	overflow-x: hidden;
+}
