Switched to storing floating point coordinates in system.json (Ly units). Added SQL output to entry.html and made SQL/JSON output update immediately on recalculation. Updated table generation code in several pages. Added bulklocate.html and distance.json crowdsourced data.

--- a/trilateration.css
+++ b/trilateration.css
@@ -14,8 +14,12 @@ td {
 .selected {
 	background-color: red;
 }
+.error {
+	background-color: red;
+}
 pre {
 	border: 1px solid black;
+	min-height: 20px;
 }
 .ui-autocomplete {
 	max-height: 190px;
